fixed scrollbars (mostly) in ff...

--- a/Viewer/css/experimenting.css
+++ b/Viewer/css/experimenting.css
@@ -175,6 +175,10 @@ body {
 	width: 10px;
 	height: 10px;
 }
+.browse-widget * {
+	scrollbar-width: thin;
+	scrollbar-color: auto;
+}
 .browse-widget ::-webkit-scrollbar-button {
 	display: none;
 }
